# my-simple-system-monitor

./: CMakeLists.txt  README.md  main
.cache/clangd/index/: LinuxParser.cpp.3FE8ADB1956E8104.idx  LinuxParser.h.02DBA8164A9FBC5B.idx  Process.cpp.40A99517D7F04D9E.idx  Process.h.2A33A772FDE97970.idx  Show.h.DA55C3403F5FC416.idx  System.cpp.9FDED5FBDA83D8E8.idx  System.h.868548B019B95F49.idx  main.cpp.D99CCB34A76F5A95.idx
include/: LinuxParser.h  Process.h  Show.h  System.h
src/: LinuxParser.cpp  Process.cpp  Show.cpp  System.cpp  main.cpp
